@@ -1,2 +1,2 @@
-usr/lib/ostree/installed-tests
+usr/lib/installed-tests/ostree
 usr/share/installed-tests/ostree
