@@ -5,6 +5,8 @@ ostree (2016.4-1) UNRELEASED; urgency=medium
     - debian/libostree-1-1.symbols: update for new versioned symbols
     - Build-depend on libmount-dev
     - debian/copyright: update
+    - debian/rules, debian/ostree-tests.install: adjust for new installation
+      directory for installed-tests
   * debian/gbp.conf: use DEP-14 branch names
   * Fix ITP bug number in changelog (was #813308, should have been #697477)
   * debian/control: build-depend on attr, for the tests (only required if
